Bug 489986 - Replace new Integer() with Integer.valueOf() in org.eclipse.test
Change-Id: I794413936999ec48b8cf1771909aff9ff33dc8d5
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>